2021-09-04  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.59  Beta version.
	* configure.ac: Bump version.
	* fwrite.c, styfile.c, {,ex}var.h:
	Support output order of symbols and numbers separately
	when "symbol_flag" is 2 in style file.
	* sort.c:
	Accept combination of "icu_locale" and "icu_rules" in style file.
	If simultaneously specified, collation rules specified by "icu_rules" are
	added on collation rules specified by "icu_locale".
	* tests/upmendex.test, tests/rule.{idx,ind}, tests/locale2.ist,
	tests/{locale1,attri1,locale2-rule}.ind:
	Add a new test and update conventional tests.

2021-08-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* styfile.c:
	Strict check for "icu_attributes" in style file.
	* sort.c:
	Strict check for "character_order" in style file.
	* fwrite.c:
	Fix a bug when "symbol_flag" is 0.
	* tests/upmendex.test, tests/attr1.{ist,ind},
	tests/locale1.ind, tests/rule.{idx,ind}:
	Add a new test and update conventional tests.

2021-08-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* styfile.c:
	Add a alias "headings_flag" of the keyword "heading_flag"
	in style file for compatibility with makeindex.
	Warn if specifier in style file is unknown.

2021-08-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c:
	Initialize a variable.
	* tests/upmendex.test, tests/locale1.{ist,ind}:
	Add a new test for "icu_locale".

2021-08-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c:
	Initialize a string. Check malformed input for "icu_rules".
	* tests/upmendex.test, tests/rule[34].ist:
	Add new tests.

2021-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/upmendex.test, tests/rule[12].ist, tests/rule.{idx,ind}:
	Add new tests for the keyword "icu_rules" in style file.

2021-08-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.58  Beta version.
	* configure.ac: Bump version.
	* main.c, convert.c, fwrite.c, sort.c, styfile.c, mendex.h, {,ex}kana.h, {,ex}var.h:
	Supports Devanagari, Thai scripts (experimental).